--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -9,6 +9,10 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.body--nosotros{
+    background-color: #F5F5F5;
+}
+
 .body--form {
     background: #00ffff;
     background: -webkit-linear-gradient(to right bottom, #008cff, #00ffbf, #1e48ff);
@@ -128,6 +132,7 @@
 .header__nav {
     padding: 1rem;
     background-color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
 }
 
@@ -252,4 +257,100 @@
         font-size: .6rem;
         font-weight: 600;
     }
+}
+
+/* PAGINA NOSOTROS */
+
+.main__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: auto;
+
+    padding-top: 6rem;
+}
+
+.info__section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    height: 90vh;
+    padding: 1rem;
+}
+
+.info__section:first-child {
+    background: url('../imgs/bg_nosotros.jpeg') center/cover;
+    background-attachment: fixed;
+}
+
+.info__section:last-child {
+    width: 90%;
+    margin: auto;
+}
+
+.info__bento {
+    display: flex; 
+    justify-content: center;
+    width: 90%;
+    align-items: center;
+    gap: 10px;
+}
+
+.bento__column {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.bento__card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 
+    0 1px 3px rgba(0, 0, 0, 0.06);
+    width: 100%;
+    height: 14rem;
+    background-color: rgba(255, 197, 73, 0.863);
+}
+
+.bento__card--height {
+    height: 25rem !important;
+}
+
+.card_description {
+    font-size: 1.5rem;
+}
+
+.info__card {
+    display: flex; 
+    flex-direction: column;
+    gap: 5px;
+    border-radius: 10px;
+    padding: .5rem;
+    background-color: white;
+    width: 20%;
+}
+
+.card__header {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.card__content {
+    
+}
+
+.card__img {
+    border-radius: 5px;
+    width: 100%;
 }
