--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -21,19 +21,20 @@
     background: #00ffff;
     background: -webkit-linear-gradient(to right bottom, #008cff, #00ffbf, #1e48ff);
     background: linear-gradient(to right bottom, #4e8ddf, #00ffbf, #1100ff);
+    background-size: cover;
+    height: 100vh;
+    background-repeat: no-repeat;
 }
 
 .contenedor {
-    border: 1px solid;
     display: flex;
     align-items: center;
-    height: 100vh;
     padding: 1rem;
+    height: 100vh;
 }
 
 .form {
     width: auto;
-    height: 80vh;
     margin: auto;
     display: flex;
     flex-direction: column;
@@ -41,7 +42,7 @@
     align-items: center;
     text-align: center;
     gap: 15px;
-    padding: 3rem;
+    padding: 1rem;
     background-color: white;
     box-shadow: 2px, 2px, 3px rgba(0, 0, 0, .8);
     border-radius: 15px;
@@ -124,6 +125,11 @@
 
 /* PAGINA PRINCIPAL */
 
+.header--main {
+    width: 100% !important;
+    justify-content: end !important;
+}
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -150,10 +156,11 @@
     padding: 1rem;
 }
 
-.header--center {
+.header--space{
+    width: 100%;
     background-color: white;
     text-align: center !important;
-    justify-content: center;
+    justify-content: space-between !important;
 }
 
 .header__nav {
@@ -167,7 +174,7 @@
 
 
 .header__title {
-    font-size: 3rem;
+    font-size: 2rem;
     font-family: "Bungee Spice", sans-serif;
 }
 
@@ -185,6 +192,14 @@
 
 .header__item:hover {
     color: rgb(67, 67, 70);
+}
+
+.header__cuestionario {
+    padding: .6rem;
+    background-color: #e94d31;
+    color: white;
+
+    border-radius: 10px;
 }
 
 .header__button {
